--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@examples/next-minimal",
-  "version": "10.21.1",
+  "name": "zucast",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -14,9 +14,12 @@
     "@trpc/next": "^10.21.1",
     "@trpc/react-query": "^10.21.1",
     "@trpc/server": "^10.21.1",
+    "autoprefixer": "^10.4.14",
     "next": "^13.2.1",
+    "postcss": "^8.4.23",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "tailwindcss": "^3.3.1",
     "zod": "^3.0.0"
   },
   "devDependencies": {
@@ -24,6 +27,7 @@
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.5",
     "eslint": "^8.30.0",
+    "eslint-config-next": "^13.3.1",
     "typescript": "^4.8.3"
   }
 }
