--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "zucast",
   "version": "0.0.1",
   "private": true,
+  "engines": {
+    "node": ">=18"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
