--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,21 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": "next/core-web-vitals",
+
+  "rules": {
+    "import/no-restricted-paths": [
+      "error",
+      {
+        "zones": [
+          {
+            "target": "src/server/",
+            "from": "src/client/"
+          },
+          {
+            "target": "src/server/",
+            "from": "src/pages/"
+          }
+        ]
+      }
+    ]
+  }
 }
