--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@pcd/semaphore-group-pcd": "^0.4.2",
     "@tanstack/react-query": "^4.18.0",
     "@trpc/client": "^10.21.1",
     "@trpc/next": "^10.21.1",
@@ -23,7 +24,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.3.1",
-    "zod": "^3.0.0"
+    "zod": "^3.0.0",
+    "zukit": "^0.1.1"
   },
   "devDependencies": {
     "@types/node": "^18.7.20",
