--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@pcd/passport-interface": "^0.4.4",
     "@pcd/semaphore-group-pcd": "^0.4.2",
     "@tanstack/react-query": "^4.18.0",
     "@trpc/client": "^10.21.1",
@@ -33,6 +34,7 @@
     "@types/react-dom": "^18.0.5",
     "eslint": "^8.30.0",
     "eslint-config-next": "^13.3.1",
+    "ts-node": "^10.9.1",
     "typescript": "^4.8.3"
   }
 }
