--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@pcd/passport-interface": "^0.4.4",
+    "@pcd/pcd-types": "^0.4.2",
     "@pcd/semaphore-group-pcd": "^0.4.2",
     "@tanstack/react-query": "^4.18.0",
     "@trpc/client": "^10.21.1",
