--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@trpc/react-query": "^10.21.1",
     "@trpc/server": "^10.21.1",
     "autoprefixer": "^10.4.14",
+    "classnames": "^2.3.2",
     "next": "^13.2.1",
     "postcss": "^8.4.23",
     "react": "^18.2.0",
