--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@pcd/passport-interface": "^0.4.4",
     "@pcd/pcd-types": "^0.4.2",
     "@pcd/semaphore-group-pcd": "^0.4.2",
+    "@primer/octicons-react": "^18.3.0",
     "@tanstack/react-query": "^4.18.0",
     "@trpc/client": "^10.21.1",
     "@trpc/next": "^10.21.1",
