--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "autoprefixer": "^10.4.14",
     "classnames": "^2.3.2",
     "next": "^13.2.1",
+    "pg": "^8.10.0",
     "postcss": "^8.4.23",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -34,6 +35,7 @@
   },
   "devDependencies": {
     "@types/node": "^18.7.20",
+    "@types/pg": "^8.6.6",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.5",
     "eslint": "^8.30.0",
