--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "next dev",
     "build": "next build",
     "lint": "eslint --cache --ext \".js,.ts,.tsx\" --report-unused-disable-directives src",
-    "test": "tsc --noEmit && jest",
+    "test": "tsc --noEmit",
     "start": "next start"
   },
   "dependencies": {
@@ -34,15 +34,12 @@
     "zukit": "^0.2.2"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.1",
     "@types/node": "^18.7.20",
     "@types/pg": "^8.6.6",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.5",
     "eslint": "^8.30.0",
     "eslint-config-next": "^13.3.1",
-    "jest": "^29.5.0",
-    "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.3"
   }
