--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "postcss": "^8.4.23",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "sharp": "^0.32.1",
     "tailwindcss": "^3.3.1",
     "zod": "^3.0.0",
     "zukit": "^0.2.2"
