--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,11 @@
     "incremental": true,
     "baseUrl": "."
   },
-  "include": ["next-env.d.ts", "src/**/*.ts", "src/**/*.tsx"],
+  "include": [
+    "next-env.d.ts",
+    "src/**/*.ts",
+    "src/**/*.tsx",
+    "src/test/index.js"
+  ],
   "exclude": ["node_modules"]
 }
