--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "next dev",
     "build": "next build",
     "lint": "eslint --cache --ext \".js,.ts,.tsx\" --report-unused-disable-directives src",
-    "test": "tsc --noEmit && node --require ts-node/register --trace-sigint src/test",
+    "test": "tsc --noEmit && ts-mocha --exit src/**/*.test.ts",
     "start": "next start"
   },
   "dependencies": {
@@ -41,7 +41,7 @@
     "@types/react-dom": "^18.0.5",
     "eslint": "^8.30.0",
     "eslint-config-next": "^13.3.1",
-    "ts-node": "^10.9.1",
+    "ts-mocha": "^10.0.0",
     "typescript": "^4.8.3"
   }
 }
