--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "start": "next start"
   },
   "dependencies": {
-    "@pcd/passport-interface": "^0.4.4",
-    "@pcd/pcd-types": "^0.4.2",
-    "@pcd/semaphore-group-pcd": "^0.4.2",
+    "@pcd/passport-interface": "^0.5.1",
+    "@pcd/pcd-types": "^0.5.1",
+    "@pcd/semaphore-group-pcd": "^0.5.1",
     "@primer/octicons-react": "^18.3.0",
     "@tanstack/react-query": "^4.18.0",
     "@trpc/client": "^10.21.1",
@@ -24,7 +24,7 @@
     "@trpc/server": "^10.21.1",
     "autoprefixer": "^10.4.14",
     "classnames": "^2.3.2",
-    "next": "^13.2.1",
+    "next": "^13.4.1",
     "pg": "^8.10.0",
     "postcss": "^8.4.23",
     "react": "^18.2.0",
@@ -32,16 +32,25 @@
     "sharp": "^0.32.1",
     "tailwindcss": "^3.3.1",
     "zod": "^3.0.0",
-    "zukit": "^0.2.2"
+    "zukit": "^0.2.4"
   },
   "devDependencies": {
-    "@types/node": "^18.7.20",
+    "@types/json-bigint": "^1.0.1",
+    "@types/libsodium-wrappers": "^0.7.10",
+    "@types/mocha": "^10.0.1",
+    "@types/node": "^20.1.0",
     "@types/pg": "^8.6.6",
     "@types/react": "^18.0.9",
-    "@types/react-dom": "^18.0.5",
-    "eslint": "^8.30.0",
-    "eslint-config-next": "^13.3.1",
+    "@types/react-dom": "^18.2.4",
+    "@types/styled-components": "^5.1.26",
+    "@types/uuid": "^9.0.1",
+    "eslint": "^8.40.0",
+    "eslint-config-next": "^13.4.1",
     "ts-mocha": "^10.0.0",
-    "typescript": "^4.8.3"
+    "typescript": "^5.0.4"
+  },
+  "resolutions": {
+    "@types/react": "^18",
+    "@types/react-dom": "^18"
   }
 }
